[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/AreaKilometer50-ow3xB.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://entities/credits/credits.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[node name="credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="stats" type="Control" parent="."]
margin_top = 128.0
margin_right = 448.0
margin_bottom = 600.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="punchesThrown" type="Label" parent="stats"]
margin_left = 48.0
margin_right = 256.0
margin_bottom = 32.0
text = "Punches Thrown:"
valign = 1

[node name="punchesThrownCount" type="Label" parent="stats"]
margin_left = 216.0
margin_right = 344.0
margin_bottom = 32.0
text = "1234567890"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bananaThrown" type="Label" parent="stats"]
margin_left = 48.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 96.0
text = "Bananas Thrown:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bananasThrownCount" type="Label" parent="stats"]
margin_left = 216.0
margin_top = 64.0
margin_right = 344.0
margin_bottom = 96.0
text = "1234567890"
valign = 1

[node name="bfgShotsFired" type="Label" parent="stats"]
margin_left = 48.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 160.0
text = "BFG9000 Shots Fired:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bfgShotsFiredCount" type="Label" parent="stats"]
margin_left = 248.0
margin_top = 128.0
margin_right = 376.0
margin_bottom = 160.0
text = "1234567890"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump" type="Label" parent="stats"]
margin_left = 48.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 224.0
text = "Jump Count:"
valign = 1

[node name="jumpCount" type="Label" parent="stats"]
margin_left = 168.0
margin_top = 192.0
margin_right = 296.0
margin_bottom = 224.0
text = "1234567890"
valign = 1

[node name="damageReceived" type="Label" parent="stats"]
margin_left = 48.0
margin_top = 256.0
margin_right = 256.0
margin_bottom = 288.0
text = "Damage Received:"
valign = 1

[node name="damageReceivedCount" type="Label" parent="stats"]
margin_left = 208.0
margin_top = 256.0
margin_right = 336.0
margin_bottom = 288.0
text = "1234567890"
valign = 1

[node name="damageDealt" type="Label" parent="stats"]
margin_left = 48.0
margin_top = 320.0
margin_right = 256.0
margin_bottom = 352.0
text = "Damage Dealt:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damageDealtCount" type="Label" parent="stats"]
margin_left = 184.0
margin_top = 320.0
margin_right = 312.0
margin_bottom = 352.0
text = "1234567890"
valign = 1

[node name="deathCountLabel" type="Label" parent="stats"]
margin_left = 48.0
margin_top = 384.0
margin_right = 168.0
margin_bottom = 404.0
text = "Death Count:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deathCount" type="Label" parent="stats"]
margin_left = 176.0
margin_top = 384.0
margin_right = 296.0
margin_bottom = 404.0
text = "1234567890"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightHalf" type="Control" parent="."]
margin_left = 448.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="TitleBackground" type="ColorRect" parent="."]
margin_left = 448.0
margin_right = 1024.0
margin_bottom = 128.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 448.0
margin_right = 1024.0
margin_bottom = 128.0
theme = SubResource( 4 )
text = "Banana Mania	"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLine" type="Label" parent="."]
margin_left = 448.0
margin_top = 600.0
margin_right = 1022.0
margin_bottom = 640.0
theme = SubResource( 6 )
text = "Title Line"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryLine" type="Label" parent="."]
margin_left = 448.0
margin_top = 600.0
margin_right = 1022.0
margin_bottom = 640.0
theme = SubResource( 8 )
text = "Story and Author Line"
valign = 1

[node name="CategoryLine" type="Label" parent="."]
margin_left = 448.0
margin_top = 600.0
margin_right = 1024.0
margin_bottom = 640.0
theme = SubResource( 10 )
text = "Category Line"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Label" parent="."]
margin_left = 48.0
margin_top = 40.0
margin_right = 252.0
margin_bottom = 88.0
text = "Space - Pause
Down Arrow (ui_down) - Forward
Up Arrow (ui_up) - Rewind"

[node name="exitToMenuButton" type="Button" parent="."]
visible = false
margin_left = 48.0
margin_top = 40.0
margin_right = 320.0
margin_bottom = 96.0
theme = ExtResource( 3 )
disabled = true
text = "Exit To Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="exitToMenuButton" to="." method="_on_exitToMenuButton_button_up"]
